# libRETS

./: .cvsignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile.in  Makefile.vc  Makefile.xcode  NEWS  NEWS.txt  README.md  aclocal.m4  autogen.sh  configure.ac  docker-buid-run.sh  index.html  librets-build-centos.sh  librets-build-cygwin.sh  librets-build-freebsd.sh  librets-build.sh  librets-config-inplace.in  librets-config.in  license.txt  main.css  pin-all  pin-python
documentation/: index.html
documentation/api/: _and_criterion_8h.html  _binary_data_8h.html  _capability_urls_8h.html  _curl_easy_8h.html  _curl_http_client_8h.html  _curl_http_response_8h.html  _curl_multi_8h.html  _curl_slist_8h.html  _curl_stream_8h.html  _default_metadata_collector_8h.html  _default_metadata_element_factory_8h.html  _dmql_criterion_8h.html  _dmql_expression_8h.html  _dmql_query_8h.html  _encoding_type_8h.html  _eq_criterion_8h.html  _exception_error_handler_8h.html  _expat_xml_parser_8h.html  _field_criterion_8h.html  _get_object_query_8h.html  _get_object_request_8h.html  _get_object_response_8h.html  _gt_criterion_8h.html  _incremental_metadata_finder_8h.html  _junction_criterion_8h.html  _key_value_response_8h.html  _literal_criterion_8h.html  _login_response_8h.html  _logout_response_8h.html  _lookup_columns_query_8h.html  _lookup_criterion_8h.html  _lookup_or_criterion_8h.html  _lookup_query_8h.html  _lt_criterion_8h.html  _metadata_class_8h.html  _metadata_column_group_8h.html  _metadata_column_group_control_8h.html  _metadata_column_group_normalization_8h.html  _metadata_column_group_set_8h.html  _metadata_column_group_table_8h.html  (+383 more)
documentation/csharp/: index.html  librets-dotnet.html  librets-dotnet_gettingstarted.html  librets-dotnet_introduction.html  librets-dotnet~librets.BinaryData.html  librets-dotnet~librets.BinaryData_fields.html  librets-dotnet~librets.BinaryData_members.html  librets-dotnet~librets.BinaryData_methods.html  librets-dotnet~librets.BinaryData~AsChar.html  librets-dotnet~librets.BinaryData~AsString.html  librets-dotnet~librets.BinaryData~Copy.html  librets-dotnet~librets.BinaryData~Dispose.html  librets-dotnet~librets.BinaryData~Finalize.html  librets-dotnet~librets.BinaryData~Size.html  librets-dotnet~librets.BinaryData~_ctor.html  librets-dotnet~librets.BinaryData~swigCMemOwn.html  librets-dotnet~librets.ByteVector+ByteVectorEnumerator.html  librets-dotnet~librets.ByteVector+ByteVectorEnumerator_members.html  librets-dotnet~librets.ByteVector+ByteVectorEnumerator_methods.html  librets-dotnet~librets.ByteVector+ByteVectorEnumerator_properties.html  librets-dotnet~librets.ByteVector+ByteVectorEnumerator~Current.html  librets-dotnet~librets.ByteVector+ByteVectorEnumerator~_ctor.html  librets-dotnet~librets.ByteVector.html  librets-dotnet~librets.ByteVector_fields.html  librets-dotnet~librets.ByteVector_members.html  librets-dotnet~librets.ByteVector_methods.html  librets-dotnet~librets.ByteVector_properties.html  librets-dotnet~librets.ByteVector~Add.html  librets-dotnet~librets.ByteVector~AddRange.html  librets-dotnet~librets.ByteVector~Capacity.html  librets-dotnet~librets.ByteVector~Clear.html  librets-dotnet~librets.ByteVector~Contains.html  librets-dotnet~librets.ByteVector~CopyTo(Array).html  librets-dotnet~librets.ByteVector~CopyTo(Array,Int32).html  librets-dotnet~librets.ByteVector~CopyTo(Int32,Array,Int32,Int32).html  librets-dotnet~librets.ByteVector~CopyTo.html  librets-dotnet~librets.ByteVector~Count.html  librets-dotnet~librets.ByteVector~Dispose.html  librets-dotnet~librets.ByteVector~Finalize.html  librets-dotnet~librets.ByteVector~GetEnumerator.html  (+307 more)
documentation/csharp/script/: dotnet2005.js
documentation/csharp/stylesheets/: dotnet2005.css  help2.css
documentation/devguide/: index.html  style.css
downloads/: index.html
project/examples/src/: .cvsignore  CMakeLists.txt  Makefile.vc  Options.cpp  Options.h  demo-search.cpp  get-object.cpp  http.cpp  interleaved.cpp  login.cpp  metadata.cpp  metadata2ddl.cpp  raw-rets.cpp  rawmetadata.cpp  rawsearch.cpp  search.cpp  sql2dmql.cpp  update.cpp  xml.cpp
project/iRets/: AccountsArrayController.h  AccountsArrayController.m  Info.plist  LogController.h  LogController.mm  MyController.h  MyController.mm  ResultListing.h  ResultListing.mm  RetsImage.h  RetsImage.mm  TextViewHttpLogger.h  TextViewHttpLogger.mm  iRets.icns  iRets_Prefix.pch  main.m
project/iRets/English.lproj/: InfoPlist.strings
project/librets/include/: librets.h
project/librets/sql/: RetsAST.cpp  SqlToDmqlCompiler.cpp
project/librets/src/: .cvsignore  .gitignore  AndCriterion.cpp  BinaryData.cpp  CMakeLists.txt  CapabilityUrls.cpp  CurlEasy.cpp  CurlHttpClient.cpp  CurlHttpResponse.cpp  CurlMulti.cpp  CurlSlist.cpp  CurlStream.cpp  DefaultMetadatCollector.cpp  DefaultMetadataElementFactory.cpp  DmqlCriterion.cpp  DmqlExpression.cpp  DmqlQuery.cpp  EqCriterion.cpp  ExceptionErrorHandler.cpp  ExpatXmlParser.cpp  FieldCriterion.cpp  GetObjectQuery.cpp  GetObjectRequest.cpp  GetObjectResponse.cpp  GtCriterion.cpp  IncrementalMetadataFinder.cpp  JunctionCriterion.cpp  KeyValueResponse.cpp  LiteralCriterion.cpp  LoginResponse.cpp  LogoutResponse.cpp  LookupColumnsQuery.cpp  LookupCriterion.cpp  LookupOrCriterion.cpp  LookupQuery.cpp  LtCriterion.cpp  Makefile.vc  MetadataByLevelCollector.cpp  MetadataClass.cpp  MetadataColumnGroup.cpp  (+78 more)
project/swig/: Makefile  Makefile.old  Makefile.vc  auto_ptr_release.i  librets.i  librets_bridge.cpp  librets_bridge.h  shared_ptr_release.i
project/swig/csharp/: .gitignore  CppInputStream.cs  GetObject.cs  Interleaved.cs  Logging.cs  Login.cs  Makefile  Makefile.vc  Metadata.cs  ObjectDescriptorEnumerator.cs  Options.cs  RawSearch.cs  RetsExceptionNative.cs  RetsHttpExceptionNative.cs  RetsReplyExceptionNative.cs  Search.cs  SimpleSqlMetadata.cs  Sql2DMQL.cs  TextWriterLogger.cs  Update.cs  generated.vc  librets_sharp.cpp  librets_sharp.h
project/swig/java/: CppInputStream.java  Makefile.vc  (+12 more)
support/: index.html
vendorsrc/: Makefile.vc  vendor.ps1  vendorversions
(+351 files in other folders)
