INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR} ${CURL_INCLUDE_DIR})

FILE(GLOB LIB_SOURCES *.cpp)

IF(LIBRETS_BUILD_SQL_COMPILER AND ANTLR_FOUND)
  # Add the generated sql files
  # ADD_COMMAND
  # FILE(GLOB GENERATED_SOURCES *** WHERE THE FUCK ARE THEY ***)
  # INCLUDE_DIRECTORIES(${GENERATED_DIR})
  # Add the static SQL files.
  FILE(GLOB SQL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../sql/*.cpp)
ENDIF(LIBRETS_BUILD_SQL_COMPILER AND ANTLR_FOUND)

add_library(rets STATIC ${LIB_SOURCES} ${SQL_SOURCES} ${GENERATED_SOURCES})
