INCLUDE_DIRECTORIES(BEFORE ${CMAKE_SOURCE_DIR}/project/librets/include)
INCLUDE_DIRECTORIES(${EXPAT_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ${CURL_INCLUDE_DIR})

FILE(GLOB LIB_SOURCES ${CMAKE_SOURCE_DIR}/project/librets/src/*.cpp)

IF(LIBRETS_BUILD_SQL_COMPILER AND ANTLR_FOUND)
  # Add the generated sql files
  # ADD_COMMAND
  # FILE(GLOB GENERATED_SOURCES *** WHERE THE FUCK ARE THEY ***)
  # INCLUDE_DIRECTORIES(${GENERATED_DIR})
  # Add the static SQL files.
  FILE(GLOB SQL_SOURCES ${CMAKE_SOURCE_DIR}/projects/librets/sql/*.cpp)
ENDIF(LIBRETS_BUILD_SQL_COMPILER AND ANTLR_FOUND)

SET(LIBRETS_SOURCES ${LIB_SOURCES} ${SQL_SOURCES} ${GENERATED_SOURCES})

add_library(rets STATIC ${LIBRETS_SOURCES})
# SET_TARGET_PROPERTIES(rets PROPERTIES LINK_FLAGS_DEBUG "-l${EXPAT_LIBRARY}")
# GET_TARGET_PROPERTY(FARK rets LINK_FLAGS_DEBUG)
# MESSAGE(STATUS "LINK_FLAGS PROPERTY is ${FARK}")

#add_library(retsd STATIC ${LIBRETS_SOURCES})
#SET_TARGET_PROPERTIES(retsd CMAKE_CXX_FLAGS_DEBUG "/MDd")

# IF(WIN32)
# add_library(retsmtd STATIC ${SET_TARGET_PROPERTIES})
# LIBRETS_SOURCES(retsmtd PROPERTIES CMAKE_CXX_FLAGS_DEBUG "/MTd")
# ENDIF(WIN32)
